--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Thobeka",
   "license": "ISC",
   "dependencies": {
+    "@firebasegen/default-connector": "file:dataconnect-generated/js/default-connector",
     "express": "^4.21.1"
   }
 }
