--- a/package.json
+++ b/package.json
@@ -13,5 +13,6 @@
   "dependencies": {
     "@firebasegen/default-connector": "file:dataconnect-generated/js/default-connector",
     "express": "^4.21.1"
-  }
+  },
+  "devDependencies": {}
 }
