--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@firebasegen/default-connector": "file:dataconnect-generated/js/default-connector",
     "express": "^4.21.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
